--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -17,8 +17,74 @@ OldData <-read.csv(file="covid91.csv",header=TRUE)
 #recode to remove the annoying "X" from the dataframe
 FinalData <- OldData %>% mutate(infected = recode(infected, aids = "covid", none = "OK" )) %>% select(-one_of("X"))
 ```
+```{r}
+
+```
+
 
 # Introduction
 
 A new  preventative vaccine (covid91) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups consisting of Males, Females, just the drug users, and just those in the LGBTQ community. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
 
+# Methods
+
+The first step is isolating the subpopulations
+```{r}
+maledata<-filter(FinalData, sex=="guy")
+maledata$sex <- as.factor(maledata$sex)
+```
+
+# Males
+
+## Bar Plot
+
+```{r}
+Males <- maledata %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(Males,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(Males,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+Based on the bar plot it shows that out of the approximate 340 males who were infected with Covid-19, about 57% of the males who had Covid were given the drug and about 43% that were infected got the placebo.
+
+## Numerical summary
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=maledata)
+rowPerc(table1)
+colPerc(table1)
+print(table1)
+```
+
+The table shows that about 340 males were infected with Covid-19 out of approximately 10,400 males in the study. According to the table 3.72% of the males who received the drug got Covid, and 2.55% of the males who received the placebo contracted Covid. It doesn't appear that drug was effective in this study because the drug is supposed to prevent the infection of Covid, and the table shows that males who got the vaccine were about 50% more likely to contract Covid-19.
+
+
+## Inferential Results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+The Pearson's Chi-squared test shows that the p-value is 0.0006, which is so small that it is highly unlikely that the results are by chance. 
+
+$H_0$ the null hypothesis shows that the vaccine makes no difference in the male population as to whether you contract Covid-19 or not.
+
+$H_a$ the alternative hypothesis is that the vaccine in fact does make a difference in whether or not a male contracts Covid-19. Therefore we reject thhe null hypothesis.
+
+# Females
+
+# LGBTQ
+
+# Drug Users
+
+# Discussion and Conclusion
