--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -28,18 +28,19 @@ A new  preventative vaccine (covid91) is under test in clinical trials. Given th
 
 # Methods
 
-
-```{r}
-maledata<-filter(FinalData, sex=="guy")
-maledata$sex <- as.factor(maledata$sex)
-```
+The first step is to isolate the sub-populations of Males, Females, LGBTQ, and Druguser.
 
 # Males
+
+```{r}
+Maledata<-filter(FinalData, sex=="guy")
+Maledata$sex <- as.factor(Maledata$sex)
+```
 
 ## Bar Plot
 
 ```{r}
-Males <- maledata %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+Males <- Maledata %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
 
 
 # the group_by followed by summarize(count=n())
@@ -58,7 +59,7 @@ Based on the bar plot it shows that out of the approximate 340 males who were in
 ## Numerical summary
 
 ```{r}
-table1 <- xtabs(~infected + treatment, data=maledata)
+table1 <- xtabs(~infected + treatment, data=Maledata)
 rowPerc(table1)
 colPerc(table1)
 print(table1)
@@ -81,9 +82,64 @@ $H_0$ the null hypothesis shows that the vaccine makes no difference in the male
 
 $H_a$ the alternative hypothesis is that the vaccine in fact does make a difference in whether or not a male contracts Covid-19. Therefore we reject the null hypothesis.
 
-The Fisher's Exact Test shows that the odds ratio is  1.47:1, when taking the dss ratio and computing it into a percent of effectiveness by using the formula O/(1+O)*100 you get 59.5% effectiveness.
+The Fisher's Exact Test shows that the odds ratio is 1.47:1, when taking the dss ratio and computing it into a percent of effectiveness by using the formula O/(1+O)*100 you get 59.5% effectiveness.
+
+Ultimately the vaccine is 40% effective in the Male population, which is absolutely ineffective.
 
 # Females
+
+```{r}
+Femaledata<-filter(FinalData, sex=="gal")
+Femaledata$sex <- as.factor(Femaledata$sex)
+```
+
+## Bar Plot
+
+```{r}
+Females <- Femaledata %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(Females,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(Females,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+Based on the bar plot it shows that out of the approximate 340 males who were infected with Covid-19, about 57% of the males who had Covid were given the drug and about 43% that were infected got the placebo.
+
+## Numerical summary
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=Femaledata)
+rowPerc(table1)
+colPerc(table1)
+print(table1)
+```
+
+The table shows that about 340 males were infected with Covid-19 out of approximately 10,400 males in the study. According to the table 3.72% of the males who received the drug got Covid, and 2.55% of the males who received the placebo contracted Covid. It doesn't appear that drug was effective in this study because the drug is supposed to prevent the infection of Covid, and the table shows that males who got the vaccine were about 50% more likely to contract Covid-19.
+
+
+## Inferential Results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+The Pearson's Chi-squared test shows that the p-value is 0.0006, which is so small that it is highly unlikely that the results are by chance. 
+
+$H_0$ the null hypothesis shows that the vaccine makes no difference in the male population as to whether you contract Covid-19 or not.
+
+$H_a$ the alternative hypothesis is that the vaccine in fact does make a difference in whether or not a male contracts Covid-19. Therefore we reject the null hypothesis.
+
+The Fisher's Exact Test shows that the odds ratio is 1.47:1, when taking the dss ratio and computing it into a percent of effectiveness by using the formula O/(1+O)*100 you get 59.5% effectiveness.
+
 
 # LGBTQ
 
