--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -35,6 +35,8 @@ The first step is to isolate the sub-populations of Males, Females, LGBTQ, and D
 ```{r}
 Maledata<-filter(FinalData, sex=="guy")
 Maledata$sex <- as.factor(Maledata$sex)
+Maledata$infected=factor(Maledata$infected)
+Maledata$infected<-relevel(Maledata$infected,"OK")
 ```
 
 ## Bar Plot
@@ -91,6 +93,9 @@ Ultimately the vaccine is 40% effective in the Male population, which is absolut
 ```{r}
 Femaledata<-filter(FinalData, sex=="gal")
 Femaledata$sex <- as.factor(Femaledata$sex)
+Femaledata$infected=factor(Femaledata$infected)
+Femaledata$infected<-relevel(Femaledata$infected,"OK")
+levels(Femaledata$infected)
 ```
 
 ## Bar Plot
@@ -138,6 +143,106 @@ The vaccine is 67% effective in Females.
 
 # LGBTQ
 
+# Method
+
+```{r}
+LGBTQdata<-filter(FinalData, LGBTQ=="gay")
+LGBTQdata$LGBTQ <- as.factor(LGBTQdata$LGBTQ)
+LGBTQdata$infected=factor(LGBTQdata$infected)
+LGBTQdata$infected<-relevel(LGBTQdata$infected,"OK")
+```
+
+## Bar Plot
+
+```{r}
+LGBTQ <- LGBTQdata %>% group_by(infected, treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(LGBTQ,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(LGBTQ,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+
+
+## Numerical summary
+
+```{r}
+table3 <- xtabs(~treatment + infected, data=LGBTQdata)
+rowPerc(table3)
+colPerc(table3)
+print(table3)
+```
+
+
+
+
+## Inferential Results
+
+```{r}
+chisq.test(table3)
+chisqtestGC(table3)
+fisher.test(table3)
+```
+
+The vaccine is not effective in the LGBTQ population, it is only 29% effective.
+
 # Drug Users
+
+# Method
+
+```{r}
+Druggiedata<-filter(FinalData, DrugUser=="yes")
+Druggiedata$DrugUser <- as.factor(Druggiedata$DrugUser)
+Druggiedata$infected=factor(Druggiedata$infected)
+Druggiedata$infected<-relevel(Druggiedata$infected,"OK")
+```
+
+## Bar Plot
+
+```{r}
+Druggies <- Druggiedata %>% group_by(infected, treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(Druggies,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(Druggies,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+
+
+## Numerical summary
+
+```{r}
+table4 <- xtabs(~treatment + infected, data=Druggiedata)
+rowPerc(table4)
+colPerc(table4)
+print(table4)
+```
+
+
+
+
+## Inferential Results
+
+```{r}
+chisq.test(table4)
+chisqtestGC(table4)
+fisher.test(table4)
+```
+
+The vaccine is 64% effective in the Druggie population.
 
 # Discussion and Conclusion
